# non-person-robot-controller

./: README.md
exp1/: CMake_1  CMake_2  code_1  code_2  launch_2  target.md
exp2/: target.md
exp2/exp2/: CMakeLists.txt  package.xml
exp2/exp2/src/: exp2_1.cpp  exp2_2.cpp
exp3/: code_1  code_1_tips  code_2  launch_1  launch_2  target.md
exp3/detect_lidar/: CMakeLists.txt  package.xml
exp3/detect_lidar/launch/: detect_lidar.launch
exp3/detect_lidar/msg/: LidarDetect.msg
exp3/detect_lidar/src/: detect_lidar.cpp
exp4/: target.md
exp4/exp4/: CMakeLists.txt  package.xml
exp4/exp4/src/: motionCapture.cpp
exp5/: code  target.md
exp5/exp5/: CMakeLists.txt  package.xml
final/: CMakeLists.txt  README.md  package.xml
final/src/: basic.cpp  final_camera1.cpp  final_camera2.cpp  final_lidar.cpp  final_lidar2.cpp
